# ermPoints

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  main.cpp  polinoms.cpp  polinoms.hpp
generator/: main.cpp  polygon.cpp  polygon.hpp  utils.cpp  utils.hpp
generator.xcodeproj/: project.pbxproj
generator.xcodeproj/project.xcworkspace/xcuserdata/germanzvezdin.xcuserdatad/: UserInterfaceState.xcuserstate
generator.xcodeproj/xcuserdata/germanzvezdin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
